--- a/style.css
+++ b/style.css
@@ -228,14 +228,12 @@ textarea{
     box-sizing: border-box;
     text-decoration: none;
     color: #0a0a14;
-    margin: 20px 0;
-    padding: 10px 20px;
     font-size: 20px;
     transition: .3s;
 
 }
 .btn:hover{
-    background-color: #ffffff;
+    color: #ffffff;
     border: 3px solid #e0b929;
     border-radius: 5px ;
 
