--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ nav ul li a{
 .about .about-detail{
     margin-left: 10%;
     margin-top: 10%;
-    width: 50%;
-    text-align: left;
+    width: 100%;
+    text-align: center;
     color: #fff;
 }
 
