--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ nav ul li a{
     margin-left: 10%;
     margin-top: 10%;
     width: 100%;
-    text-align: center;
     color: #fff;
 }
 
@@ -90,16 +89,11 @@ nav ul li a{
 }
 .img{
     width: 100%;
+     background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
-.img-section{
-    height: 100%;
-    margin: 0 70px;
-    text-align: center;
-    bottom: 20;
-    border: 5px solid #0a0a14;
 
-
-}
 .social-media{
     transform: rotate(-90deg);
     position: absolute;
